Fixed Spacing Again

--- a/css/services.css
+++ b/css/services.css
@@ -380,7 +380,7 @@ ul{
         position: sticky;
         top: 0;
         left: 0;
-        width: 97%;
+        width: 97.5%;
         z-index: 1000;
     }
         
